--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <ul class="nav">
           <li><a href="#x" class="on">홈</a></li>
-          <li><a href="#x">스마트폰</a></li>
+          <li><a href="/pages/phone.html">스마트폰</a></li>
           <li><a href="#x">태블릿</a></li>
           <li><a href="#x">워치</a></li>
           <li><a href="#x">버즈</a></li>
@@ -105,11 +105,11 @@
               수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고<br />파워풀
               배터리로 걱정없이 오래 착용 할 수 있습니다.
             </p>
-
             <button class="btn">구매혜택보기</button>
           </div>
         </div>
       </div>
+
       <div class="center_box">
         <div class="product_03">
           <div class="titles">
@@ -144,7 +144,7 @@
       <div class="bottom">
         <div class="center_box footer">
           <div class="footer_info">
-            <h1 class="footer_logo">Galaxy</h1>
+            <h1>Galaxy</h1>
             <p>
               우리가 제공하는 앱을 다운로드 해 보세요.<br />갤러시의 새로운
               소식을 빠르고 간편하게 확인 할 수 있습니다.
